# NIS16-ESP32-Environment

./: .gitignore  CMakeLists.txt  README (1).md  README.md  eda.py  features.py  partitions.csv  preprocess (1).py  run.ps1
components/mesh_common/: CMakeLists.txt
components/mesh_common/include/: csv_logger.h  mesh_config.h  mesh_setup.h  phase_listener.h
components/mesh_common/src/: csv_logger.c  mesh_setup.c  phase_listener.c
root_node/: CMakeLists.txt  sdkconfig  sdkconfig.defaults
root_node/main/: CMakeLists.txt  root_main.c
tools/: README.md  export_logs.py
victim_node/: CMakeLists.txt  partitions.csv  sdkconfig.defaults  sdkconfig.old
victim_node/main/: CMakeLists.txt  victim_main.c
